# weaven

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README_HANDOFF.md  fire_propagation.json  parry_combat.json
.claude/scripts/: setup-game-testing.sh
.github/workflows/: ci.yml  mycelia.yml
demos/mycelia/: SETUP.md  design.md  mycelia.json
docs/: weaven-debugger-brief.md  weaven-debugger-design.md  weaven-spec.md
models/: weaven-debugger.als  weaven.als
tools/als2cs/: Cargo.toml
weaven-bevy/: Cargo.toml
weaven-bevy/src/: lib.rs
weaven-browser/: package-lock.json  package.json  vite.config.ts
weaven-browser/src/: WeavenAdapter.ts
weaven-core/: Cargo.toml
weaven-core/src/: error.rs  expr.rs  fixtures.rs  lib.rs  models.rs  network.rs  newtypes.rs  operations.rs  schema.rs  spatial.rs  tests.rs  tick.rs  trace.rs  types.rs
weaven-core/tests/: active_set_and_parry.rs  collection_ops.rs  (+19 more)
weaven-debugger/: index.html  package-lock.json  package.json
weaven-debugger-core/: Cargo.toml
weaven-debugger/src-tauri/: Cargo.toml  tauri.conf.json
weaven-debugger/src-tauri/capabilities/: default.json
weaven-debugger/src-tauri/src/: commands.rs  lib.rs  main.rs
weaven-editor/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
weaven-unity/: Cargo.toml
weaven-unity/cs/Weaven/: WeavenNative.cs  WeavenWorld.cs
weaven-unity/cs/Weaven.Tests/: HelpersTests.cs  MyceliaTests.cs  TickResultTests.cs  ValidatorsTests.cs  Weaven.Tests.csproj
weaven-unity/src/: lib.rs
weaven-wasm/: Cargo.toml
weaven-wasm/src/: lib.rs
(+81 files in other folders)
