[package]
name = "weaven-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# trace feature forwarded from weaven-core
trace = ["weaven-core/trace"]

[dependencies]
weaven-core = { path = "../weaven-core" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
